View Issue Details

IDProjectCategoryView StatusLast Update
0032385Open CASCADEOCCT:Codingpublic2021-05-29 18:30
Reporterbugmaster Assigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2010 
Product Version7.6.0 
Target Version7.6.0Fixed in Version7.6.0 
Summary0032385: Coding - New msvc10 warnings after integration fix for 32338
Description'SelectMgr_SelectingVolumeManager::Point': Deprecated alias - SelectMgr_SelectionType should be used instead
http://jenkins-test-11.nnov.opencascade.com/job/warnings_compare/Compare_20Warnings_20Report/
Steps To ReproduceNot required
TagsNo tags attached.
Test case numberNot required

Relationships

child of 0032338 closedbugmaster Open CASCADE Visualization - provide straightforward interface for ray-picking 

Activities

git

2021-05-24 09:58

administrator   ~0101303

Branch CR32385 has been created by osa.

SHA-1: 8055eee84734d2f076b258c4b762ff683274a7c7


Detailed log of new commits:

Author: osa
Date: Mon May 24 09:59:39 2021 +0300

    0032385: Coding - New warnings after integration fix for 32338

git

2021-05-24 10:54

administrator   ~0101309

Branch CR32385 has been updated forcibly by osa.

SHA-1: ac753ebcfbf6ef870f8439a378e036297d78c5e3

git

2021-05-24 10:55

administrator   ~0101310

Branch CR32385 has been updated forcibly by osa.

SHA-1: f5c52274a799bac08c8ac628ea8a941a20a8b186

osa

2021-05-24 10:56

developer   ~0101311

The patch is ready to review

bugmaster

2021-05-26 10:20

administrator   ~0101378

Warnings on Linux:

http://jenkins-test-11.nnov.opencascade.com/view/WEEK-21_WEEK-21/view/OCCT%20compile/job/WEEK-21_WEEK-21-OCCT-Ubuntu-1604-64-opt-compile/1/warnings22Result/

http://jenkins-test-11.nnov.opencascade.com/view/WEEK-21_WEEK-21/view/OCCT%20compile/job/WEEK-21_WEEK-21-Products-Ubuntu-1604-64-opt-compile/1/warnings22Result/

git

2021-05-26 12:47

administrator   ~0101385

Branch CR32385 has been updated by osa.

SHA-1: f29a88fc0d7fe2e331194a4c3fbc3c56a8ba4fd4


Detailed log of new commits:

Author: osa
Date: Wed May 26 12:46:47 2021 +0300

    Add new macros Standard_DEPRECATED_CONST to avoid bug for GCC >= 5.0 and GCC < 6.3 when warning was raised without member usage

git

2021-05-26 12:55

administrator   ~0101387

Branch CR32385 has been updated forcibly by osa.

SHA-1: eb70f210eb53e0dd7b64b00998558dc3a7616e06

git

2021-05-26 14:33

administrator   ~0101391

Branch CR32385 has been updated forcibly by osa.

SHA-1: 58992d6faef0fbd550e66cff7d9a7578380a45bd

bugmaster

2021-05-26 14:34

administrator   ~0101392

Besides , it seems you fix caused problems with compilation of Java and CSharp wrappers
http://jenkins-test-08.nnov.opencascade.com/view/WEEK-21/view/SAMPLES/

git

2021-05-26 14:42

administrator   ~0101393

Branch CR32385 has been updated forcibly by osa.

SHA-1: b7986c3c182b0192c76c1f6e70153a492f5efa3d

git

2021-05-26 17:49

administrator   ~0101403

Branch CR32385_1 has been created by osa.

SHA-1: b32c83dd1b5030fb70b0a3610ee1e3d34e55af0a


Detailed log of new commits:

Author: osa
Date: Mon May 24 09:59:39 2021 +0300

    0032385: Coding - New msvc10 warnings after integration fix for 32338

osa

2021-05-26 18:11

developer   ~0101405

http://jenkins-test-occt.nnov.opencascade.com/view/CR32385_1-master-OSA/view/ALL/

osa

2021-05-26 18:52

developer   ~0101410

The patch CR32385_1 is ready to review

bugmaster

2021-05-29 12:02

administrator   ~0101474

Combination -
OCCT branch : IR-2021-05-28
master SHA - 2315a044240803013da63dd2f5209c739ab03727
a87b7ddc8cb44606b91e3f37113847c3f5f50fdc
Products branch : IR-2021-05-28 SHA - 2131ac830b9e3c707d427f2aac9c50dcfa5c74db
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 17574.5700000004 / 17867.41000000037 [-1.64%]
Products
Total CPU difference: 11533.700000000124 / 11535.680000000108 [-0.02%]
Windows-64-VC14:
OCCT
Total CPU difference: 19393.5625 / 19367.75 [+0.13%]
Products
Total CPU difference: 12891.8125 / 12920.9375 [-0.23%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2021-05-29 13:12

administrator   ~0101498

Branch CR32385 has been deleted by mnt.

SHA-1: b7986c3c182b0192c76c1f6e70153a492f5efa3d

git

2021-05-29 13:12

administrator   ~0101499

Branch CR32385_1 has been deleted by mnt.

SHA-1: b32c83dd1b5030fb70b0a3610ee1e3d34e55af0a

Related Changesets

occt: master 18a35314

2021-05-24 06:59:39

osa


Committer: bugmaster Details Diff
0032385: Coding - New msvc10 warnings after integration fix for 32338 Affected Issues
0032385
mod - src/SelectMgr/SelectMgr_SelectingVolumeManager.hxx Diff File

Issue History

Date Modified Username Field Change
2021-05-22 12:14 bugmaster New Issue
2021-05-22 12:14 bugmaster Assigned To => kgv
2021-05-22 12:20 bugmaster Description Updated
2021-05-22 12:21 bugmaster Status new => assigned
2021-05-22 12:38 kgv Assigned To kgv => osa
2021-05-22 12:38 kgv Product Version => 7.6.0
2021-05-22 12:38 kgv Relationship added child of 0032338
2021-05-24 09:55 kgv OS => VC++ 2010
2021-05-24 09:55 kgv OS Version => 64-bit
2021-05-24 09:55 kgv Platform => Windows
2021-05-24 09:55 kgv Summary Coding - New warnings after integration fix for 32338 => Coding - New msvc10 warnings after integration fix for 32338
2021-05-24 09:58 git Note Added: 0101303
2021-05-24 10:54 git Note Added: 0101309
2021-05-24 10:55 git Note Added: 0101310
2021-05-24 10:56 osa Note Added: 0101311
2021-05-24 10:56 osa Assigned To osa => kgv
2021-05-24 10:56 osa Status assigned => resolved
2021-05-24 10:56 osa Steps to Reproduce Updated
2021-05-24 11:56 kgv Assigned To kgv => bugmaster
2021-05-24 11:56 kgv Status resolved => reviewed
2021-05-26 10:20 bugmaster Note Added: 0101378
2021-05-26 10:20 bugmaster Assigned To bugmaster => osa
2021-05-26 10:20 bugmaster Status reviewed => assigned
2021-05-26 12:47 git Note Added: 0101385
2021-05-26 12:55 git Note Added: 0101387
2021-05-26 14:33 git Note Added: 0101391
2021-05-26 14:34 bugmaster Note Added: 0101392
2021-05-26 14:42 git Note Added: 0101393
2021-05-26 17:49 git Note Added: 0101403
2021-05-26 18:11 osa Note Added: 0101405
2021-05-26 18:52 osa Note Added: 0101410
2021-05-26 18:52 osa Assigned To osa => kgv
2021-05-26 18:52 osa Status assigned => resolved
2021-05-26 19:06 kgv Assigned To kgv => bugmaster
2021-05-26 19:06 kgv Status resolved => reviewed
2021-05-29 12:02 bugmaster Note Added: 0101474
2021-05-29 12:02 bugmaster Status reviewed => tested
2021-05-29 12:07 bugmaster Test case number => Not required
2021-05-29 12:12 bugmaster Changeset attached => occt master 18a35314
2021-05-29 12:12 bugmaster Status tested => verified
2021-05-29 12:12 bugmaster Resolution open => fixed
2021-05-29 13:12 git Note Added: 0101498
2021-05-29 13:12 git Note Added: 0101499