0032385: Coding - New msvc10 warnings after integration fix for 32338